# esp-amp

./: README.md
components/esp_amp/: CMakeLists.txt  Kconfig  project_include.cmake
components/esp_amp/cmake/: subcore_project.cmake
components/esp_amp/idf_stub/esp_rom/: CMakeLists.txt
components/esp_amp/idf_stub/esp_system/: CMakeLists.txt  panic_handler.c
components/esp_amp/idf_stub/esp_system/esp32p4/: panic_handler.c  portasm.S  start.S  syscalls.c
components/esp_amp/include/: esp_amp.h  esp_amp_event.h  esp_amp_loader.h  esp_amp_queue.h  esp_amp_rpc.h  esp_amp_rpmsg.h  esp_amp_sw_intr.h  esp_amp_sys_info.h  esp_amp_system.h
components/esp_amp/priv_include/: esp_amp_log.h  esp_amp_mem_priv.h  esp_amp_priv.h  esp_amp_sw_intr_priv.h
components/esp_amp/scripts/: check_symbols.py
components/esp_amp/src/: esp_amp.c  esp_amp_loader.c  esp_amp_queue.c  esp_amp_rpmsg.c  esp_amp_sw_intr.c  esp_amp_sys_info.c
components/esp_amp/system/: esp_amp_cpu.c  esp_amp_loader.c  esp_amp_service.c
docs/: build_system.md  event.md  memory_layout.md  port.md  queue.md  rpc.md  rpmsg.md  shared_memory.md  software_interrupt.md
examples/build_system/unified_build/: README.md  sdkconfig.defaults
examples/software_interrupt/: partitions.csv
examples/software_interrupt/subcore/: subcore_config.cmake
examples/virtqueue/common/: sys_info.h
test_apps/esp_amp_basic_tests/: pytest_esp_amp_basic_tests.py  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32p4
test_apps/esp_amp_basic_tests/maincore/: CMakeLists.txt  test_app_main.c  test_ept_main.c  test_event_main.c  (+4 more)
(+53 files in other folders)
